<resources>
    <string name="app_name">Fintrack</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="man">Male</string>
    <string name="woman">Female</string>
    <string name="other">Non Binary</string>
    <string name="save">Register</string>
    <string name="home_hello">Hello %s!</string>
    <string name="home_new_transaction">New Transaction</string>
    <string name="home_bank_balance">$0.00</string>
    <string name="home_balance_available">Current Balance</string>
    <string name="futurest_balance">Futurest Balance</string>
    <string name="new_transaction">ADD TRANSACTION</string>
    <string name="transactions">Transactions</string>
    <string name="transactions_str">Transactions</string>
    <string name="submit">Submit</string>
    <string name="expense">Expense</string>
    <string name="pub">Pub</string>
    <string name="income">Income</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="unknown_operation_msg">Operation must be selected!</string>
    <string name="successfully_registered_transaction_msg">Successfully registered transaction</string>
    <string name="empty_transaction_msg">Transaction cannot be empty!</string>
    <string name="register_now">New here? <u>Register now!</u></string>
    <string name="date">Transaction Date</string>
    <string name="add_transactions_button">add transactions button</string>
    <string name="projected_balance_place_holder">Projected Balance</string>
    <string name="project_balance">Project Balance</string>
    <string name="date_filter_button">Date filter button</string>
    <string name="back_arrow">back arrow</string>
    <string name="balance_icon">balance_icon</string>
</resources>