<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="org.fundatec.vinilemess.tcc.fintrackapp.activities.TransactionRegistryActivity">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent">
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                />
        </Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_description"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/description"
            app:layout_constraintBottom_toTopOf="@id/ti_amount"
            app:layout_constraintStart_toStartOf="@id/submit_button"
            app:layout_constraintEnd_toEndOf="@id/submit_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="24"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_amount"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/amount"
            app:layout_constraintBottom_toTopOf="@id/rd_group"
            app:layout_constraintStart_toStartOf="@id/submit_button"
            app:layout_constraintEnd_toEndOf="@id/submit_button"
            app:layout_constraintTop_toBottomOf="@id/ti_description"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rd_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ti_amount"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/ti_amount">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rd_expense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/expense"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/rd_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/income"/>
        </RadioGroup>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:textColor="@color/white"
            android:text="@string/submit"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/rd_group"
            app:layout_constraintEnd_toEndOf="@+id/rd_group"
            app:layout_constraintTop_toBottomOf="@+id/rd_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
